<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InciarSesion"
            android:textSize="25sp"
            android:gravity="center"
            android:fontFamily="@font/gym_font"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="registration.json"
            app:lottie_loop="false"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CorreoLogin"
                android:hint="@string/LoginCorreo"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/gym_font"
                android:inputType="textEmailAddress"/>



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ContrasenaLogin"
                android:hint="@string/ContrasenaLogin"
                android:drawableStart="@drawable/icono_pass"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/gym_font"
                android:inputType="textPassword"/>



        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gym_font"
            android:layout_marginTop="10dp"
            android:text="@string/BotonLogin"
            android:id="@+id/BotonLogin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gym_font"
            android:layout_marginTop="10dp"
            android:text="@string/BotonLoginReg"
            android:id="@+id/BotonLoginReg"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>