<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"

    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >
        
        <TextView
            android:text="@string/CrearcuentaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:fontFamily="@font/gym_font"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="r4y.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:inputType="textPersonName|textCapWords"
                android:hint="@string/NombreEt"
                android:id="@+id/NombreEt"
                android:drawableStart="@drawable/icono_nombre"
                android:drawablePadding="12dp"
                android:fontFamily="@font/gym_font"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:inputType="textEmailAddress"
                android:hint="@string/CorreoEt"
                android:id="@+id/CorreoEt"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="12dp"
                android:fontFamily="@font/gym_font"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:inputType="textPassword"
                android:hint="@string/ContraseñaEt"
                android:id="@+id/ContaseñaEt"
                android:drawableStart="@drawable/icono_pass"
                android:drawablePadding="12dp"
                android:fontFamily="@font/gym_font"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="10dp">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:inputType="textPassword"
                android:hint="@string/ConfirmarContraseñaEt"
                android:id="@+id/ConfirmarContaseñaEt"
                android:drawableStart="@drawable/icono_pass"
                android:drawablePadding="12dp"
                android:fontFamily="@font/gym_font"
                />



        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/roleSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <RadioButton
                android:id="@+id/radioNormalUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario Normal"
                android:checked="true"
                android:fontFamily="@font/gym_font"/>

            <RadioButton
                android:id="@+id/radioAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Administrador"
                android:fontFamily="@font/gym_font"/>
        </RadioGroup>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/gym_font"
            android:id="@+id/RegistrarUsuario"
            android:textSize="18sp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/TengounacuentaTXT"
            android:text="@string/TengounacuentaTXT"
            android:fontFamily="@font/gym_font"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            />







    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>