<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_fileName="splash.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="30sp"
                android:text="@string/app_name"
                android:fontFamily="@font/gym_font"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Btn_Login"
                android:id="@+id/Btn_Login"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gym_font"
                android:textSize="30sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Btn_Registro"
                android:id="@+id/Btn_Registro"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gym_font"
                android:textSize="30sp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>